<resources>
    <string name="app_name">Recuperacion_Gonzalo_Campos</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="mod_registrar">Registrarse</string>
    <string name="ver_contraseña">Ver Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="debes_introducir_un_nombre_de_usuario">Debes introducir un nombre de usuario</string>
    <string name="debes_introducir_una_contrase_a">Debes introducir una contraseña</string>
    <string name="la_contrase_a_debe_ser_superior_a_7_caracteres">La contraseña debe ser superior a 7 caracteres</string>
    <string name="ver_contrase_a">Ver Contraseña</string>
    <string name="ocultar_contrase_a">Ocultar Contraseña</string>
    <string name="registro_realizado">Registro realizado</string>
    <string name="las_contrase_as_no_coinciden">Las contraseñas no coinciden</string>
    <string name="seleccion_varios_productos">Seleccion Productos</string>
    <string name="pregunta1">¿Cual es un pez de fondo?</string>
    <string name="pregunta2">¿Cual es un pez de roca?</string>
    <string name="pregunta3">¿Cual es un mamifero?</string>
    <string name="respuesta1">Solla</string>
    <string name="respuesta2">Tiburon</string>
    <string name="respuesta3">Sargo</string>
    <string name="respuesta4">Robaliza</string>
    <string name="respuesta5">Raya</string>
    <string name="respuesta6">Lorcha</string>
    <string name="respuesta7">Pinto</string>
    <string name="respuesta8">Atún</string>
    <string name="respuesta9">Ballena</string>
    <string name="pez_beta">Pez Beta</string>
    <string name="saltarin">Saltarin</string>
    <string name="delfin">Delfin</string>
    <string name="mas_info">Mas informacion</string>
    <string name="voler">Volver</string>
    <string name="menu">Menu</string>
    <string name="listado">Listado</string>
    <string name="test">Test del pescador</string>
    <string name="enviar_test">Enviar</string>
    <string name="han_picado">Han picado</string>
    <string name="haz_click_imagen">Haz click en la imagen</string>
    <string name="contador">Contador</string>
    <string name="haz_click_veces_m_s">Haz click %1$s veces más</string>
    <string name="haz_click_veces_m_s2">Haz click %1$s veces más</string>


</resources>